test/failed-2/secret/subtyping/functions/ill-typed/functions-4.stella
// ERROR_MISSING_RECORD_FIELDS
language core;
extend with
  #structural-subtyping,
  #records;

fn main(
  x : fn(fn({ a : Nat }) -> Nat) -> Nat
) -> fn(fn({ a : Nat, b : Nat }) -> Nat) -> Nat {
  return x
}
